--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2024"
 
 [dependencies]
 # Frontend dependencies
-dioxus = { version = "0.6.3", features = ["desktop"] }
-dioxus-router = "0.6.3"
-dioxus-desktop = "0.6.3"
+dioxus = { version = "0.7.0-alpha.2", features = ["desktop"] }
+dioxus-router = "0.7.0-alpha.2"
+dioxus-desktop = { version = "0.7.0-alpha.2", default-features = true }
+
 # Backend dependencies
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
@@ -16,4 +17,12 @@ glob = "0.3.2"
 futures = "0.3.31"
 hyper = { version = "0.14", features = ["http2", "client"] }
 hyper-rustls = { version = "0.24", features = ["http2"] }
-reqwest = "0.12.22"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+reqwest = { version = "0.12.22", features = ["json", "stream"] }
+dirs = "6.0.0"
+dashmap = "7.0.0-rc2"
+lru = "0.16.0"
+
+[features]
+default = ["desktop"]
+desktop = ["dioxus/desktop"]
