--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,21 @@
 [package]
 name = "DreamLauncher"
-version = "1.0.0"
+authors = ["Frogdream Studios <"]
+description = "A powerful and lightweight Minecraft launcher that will be perfect for every player."
+license = "LGPL-3.0-only"
+version = "1.0.0-beta"
 edition = "2024"
 
 [dependencies]
 # Frontend dependencies
-dioxus = { version = "0.7.0-alpha.2", features = ["desktop"] }
-dioxus-router = "0.7.0-alpha.2"
-dioxus-desktop = { version = "0.7.0-alpha.2", default-features = true }
+dioxus = { version = "0.7.0-alpha.3", features = ["desktop"] }
+dioxus-router = "0.7.0-alpha.3"
+dioxus-desktop = { version = "0.7.0-alpha.3", default-features = true }
 
 # Backend dependencies
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", features = ["full"] }
+serde_json = "1.0.141"
+tokio = { version = "1.47.0", features = ["full"] }
 glob = "0.3.2"
 futures = "0.3.31"
 hyper = { version = "0.14", features = ["http2", "client"] }
