feat: improve Java version management and cleanup
Update Java Azul and change CDN link. Implement Java version retrieval using Mojang Meta

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ reqwest = { version = "0.12.22", features = ["json", "stream"] }
 dirs = "6.0.0"
 dashmap = "7.0.0-rc2"
 lru = "0.16.0"
+version_check = "0.9.5"
 
 [features]
 default = ["desktop"]
