--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,25 +8,27 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-15, windows-2022]
+        os: [ubuntu-24.04, macos-14, windows-2025]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Cache cargo registry
+      - name: Cache APT packages
+        if: matrix.os == 'ubuntu-24.04'
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          path: /var/cache/apt
+          key: ubuntu-apt-${{ hashFiles('.github/workflows/rust.yml') }}
+          restore-keys: |
+            ubuntu-apt-
 
-      - name: Install Linux dependencies
-        if: matrix.os == 'ubuntu-22.04'
+      - name: Dependencies
+        if: matrix.os == 'ubuntu-24.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -42,22 +44,41 @@ jobs:
             curl \
             xdotool
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Cache Cargo registry
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-registry-
+
+      - name: Cache Cargo git
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/git
+          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-git-
+
+      - name: Cache target dir
+        uses: actions/cache@v4
+        with:
+          path: target
+          key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-target-
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-          override: true
-          components: rustfmt, clippy
+          components: rustfmt
 
-      - name: Build project
+      - name: Build
         shell: bash
         run: cargo build --release --locked --features "desktop"
 
-      - name: Run tests
-        shell: bash
-        run: cargo test --release --locked --features "desktop" -- --nocapture
-
-      - name: Archive binary
+      - name: Package
         shell: bash
         run: |
           mkdir dist
@@ -75,38 +96,16 @@ jobs:
           name: DreamLauncher-${{ runner.os }}
           path: DreamLauncher-*.zip
 
-  lint:
-    runs-on: ubuntu-22.04
+  upload-artifacts:
+    name: Artifacts
+    runs-on: ubuntu-24.04
+    needs: build
+    if: always()
     steps:
-      - uses: actions/checkout@v4
-      - name: Install Linux dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libsoup-3.0-dev \
-            libssl-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libwebkit2gtk-4.1-dev \
-            libxdo-dev \
-            pkg-config \
-            build-essential \
-            curl \
-            xdotool
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
         with:
-          toolchain: nightly
-          override: true
-          components: rustfmt, clippy
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: lint-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Run clippy
-        run: cargo clippy --all
+          path: all-artifacts
+
+      - name: List artifacts
+        run: ls -R all-artifacts
