--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,20 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache APT packages
-        if: matrix.os == 'ubuntu-24.04'
-        uses: actions/cache@v4
-        with:
-          path: /var/cache/apt
-          key: ubuntu-apt-${{ hashFiles('.github/workflows/rust.yml') }}
-          restore-keys: |
-            ubuntu-apt-
-
       - name: Dependencies
         if: matrix.os == 'ubuntu-24.04'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
+          sudo DEBIAN_FRONTEND=noninteractive apt-get -qq update
+          sudo DEBIAN_FRONTEND=noninteractive apt-get -qq install --no-install-recommends -y \
             libgtk-3-dev \
             libglib2.0-dev \
             libsoup-3.0-dev \
