chore: reorganize module structure and cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ description = "A powerful and lightweight Minecraft launcher that will be perfec
 license = "LGPL-3.0-only"
 version = "1.0.0-beta"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
 # Frontend dependencies
@@ -25,7 +26,6 @@ reqwest = { version = "0.12.22", features = ["json", "stream"] }
 dirs = "6.0.0"
 dashmap = "7.0.0-rc2"
 lru = "0.16.0"
-version_check = "0.9.5"
 
 [features]
 default = ["desktop"]
