--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,20 +20,21 @@ jobs:
 
       - name: Dependencies
         if: matrix.os == 'ubuntu-24.04'
-        run: |
-          sudo DEBIAN_FRONTEND=noninteractive apt-get -qq update
-          sudo DEBIAN_FRONTEND=noninteractive apt-get -qq install --no-install-recommends -y \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libsoup-3.0-dev \
-            libssl-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libwebkit2gtk-4.1-dev \
-            libxdo-dev \
-            pkg-config \
-            build-essential \
-            curl \
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: >
+            libgtk-3-dev
+            libglib2.0-dev
+            libsoup-3.0-dev
+            libssl-dev
+            libjavascriptcoregtk-4.1-dev
+            libwebkit2gtk-4.1-dev
+            libxdo-dev
+            pkg-config
+            build-essential
+            curl
             xdotool
+          version: 1
 
       - name: Cache Cargo registry
         uses: actions/cache@v4
