fix: correct cargo build command syntax in CI configuration

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          cargo build --release --features --locked "desktop" -j $(nproc)
+          cargo build --release --locked --features "desktop"
 
       - name: Package
         shell: bash
