--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,22 +20,33 @@ jobs:
 
       - name: Dependencies
         if: matrix.os == 'ubuntu-24.04'
-        run: |
-          sudo DEBIAN_FRONTEND=noninteractive apt-get -qq update
-          sudo DEBIAN_FRONTEND=noninteractive apt-get -qq install --no-install-recommends -y \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libsoup-3.0-dev \
-            libssl-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libwebkit2gtk-4.1-dev \
-            libxdo-dev \
-            pkg-config \
-            build-essential \
-            curl \
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: >
+            libgtk-3-dev
+            libglib2.0-dev
+            libsoup-3.0-dev
+            libssl-dev
+            libjavascriptcoregtk-4.1-dev
+            libwebkit2gtk-4.1-dev
+            libxdo-dev
+            pkg-config
+            build-essential
+            curl
             xdotool
+          version: 1
 
-      - name: Cache Cargo registry
+      - name: Cache Rust
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/bin
+          key: ${{ runner.os }}-rustup-${{ hashFiles('rust-toolchain.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-rustup-
+
+      - name: Cache Cargo Registry
         uses: actions/cache@v4
         with:
           path: ~/.cargo/registry
@@ -43,7 +54,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-registry-
 
-      - name: Cache Cargo git
+      - name: Cache Cargo Git
         uses: actions/cache@v4
         with:
           path: ~/.cargo/git
@@ -51,23 +62,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-git-
 
-      - name: Cache target dir
+      - name: Cache Target Dir
         uses: actions/cache@v4
         with:
           path: target
-          key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.lock') }}-desktop
           restore-keys: |
             ${{ runner.os }}-target-
 
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: nightly
-          components: rustfmt
+        run: rustup show
 
       - name: Build
         shell: bash
-        run: cargo build --release --locked --features "desktop"
+        run: |
+          cargo build --release --locked --features "desktop"
 
       - name: Package
         shell: bash
