--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, chore/modularize-codebase]
   pull_request:
-    branches: [main]
+    branches: [main, chore/modularize-codebase]
 
 jobs:
   build:
