--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust CI
 
 on:
   push:
-    branches: [main, fix/unstable-paths]
+    branches: ['**']
   pull_request:
-    branches: [main, fix/unstable-paths]
+    branches: ['**']
 
 jobs:
   build:
