--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ anyhow = "1.0.98"
 image = "0.25.6"
 tao = "0.34.0"
 
+[build-dependencies]
+winres = "0.1"
+
 [features]
 default = ["desktop"]
 desktop = ["dioxus/desktop"]
