--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -97,6 +97,10 @@ jobs:
             cp assets/icons/app_icon.icns "target/release/Dream Launcher.app/Contents/Resources/app_icon.icns"
             chmod +x "target/release/Dream Launcher.app/Contents/MacOS/Dream Launcher"
 
+            # Clean extended attributes and codesign
+            find "target/release/Dream Launcher.app" -exec xattr -c {} \;
+            codesign --force --deep --sign - "target/release/Dream Launcher.app"
+
             # Get version from Cargo.toml
             VERSION=$(grep '^version' Cargo.toml | sed 's/version = "\(.*\)"/\1/')
 
