chore: optimize imports

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,26 +9,44 @@ edition = "2024"
 [dependencies]
 dioxus = { version = "0.7.0-alpha.3", features = ["desktop"] }
 dioxus-router = "0.7.0-alpha.3"
-dioxus-desktop = { version = "0.7.0-alpha.3", default-features = true }
+dioxus-desktop = { version = "0.7.0-alpha.3", default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.141"
-tokio = { version = "1.47.0", features = ["full"] }
+serde_json = "1.0.142"
+tokio = { version = "1.47.1", features = [
+    "rt-multi-thread",
+    "fs",
+    "process",
+    "time",
+    "sync",
+    "macros",
+] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-reqwest = { version = "0.12.22", features = ["json", "stream", "rustls-tls"] }
-futures-util = "0.3.31"
-zip = "4.3.0"
-flate2 = "1.1.2"
-tar = "0.4.44"
-clap = { version = "4.4.42", features = ["derive"] }
-dialoguer = "0.11.0"
-console = "0.16.0"
+reqwest = { version = "0.12.22", features = [
+    "json",
+    "stream",
+    "rustls-tls",
+], default-features = false }
+futures-util = { version = "0.3.31", default-features = false, features = [
+    "std",
+] }
+zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
+flate2 = { version = "1.1.2", default-features = false, features = [
+    "rust_backend",
+] }
+tar = { version = "0.4.44", default-features = false }
+clap = { version = "4.4.42", features = [
+    "derive",
+    "std",
+], default-features = false }
+dialoguer = { version = "0.11.0", default-features = false }
+console = { version = "0.16.0", default-features = false, features = ["std"] }
 sha1 = "0.11.0-rc.0"
 dirs = "6.0.0"
 hex = "0.4.3"
 which = "8.0.0"
 tracing = "0.1.41"
 anyhow = "1.0.98"
-image = "0.25.6"
+image = { version = "0.25.6", default-features = false, features = ["png"] }
 tao = "0.34.0"
 
 [build-dependencies]
