--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwindcss -i ./assets/styles/main.css -o ./assets/styles/output.css --minify",
-    "watch:css": "tailwindcss -i ./assets/styles/main.css -o ./assets/styles/output.css --watch",
-    "dev:css": "tailwindcss -i ./assets/styles/main.css -o ./assets/styles/output.css --watch --minify"
+    "build:css": "tailwindcss -i ./assets/styles/tailwind.css -o ./assets/styles/output.css --minify",
+    "watch:css": "tailwindcss -i ./assets/styles/tailwind.css -o ./assets/styles/output.css --watch",
+    "dev:css": "tailwindcss -i ./assets/styles/tailwind.css -o ./assets/styles/output.css --watch --minify"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/FrogdreamStudios/launcher#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
   }
 }
