--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,10 @@ tokio = { version = "1.47.1", features = [
     "time",
     "sync",
     "macros",
-] }
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+], default-features = false }
+tracing-subscriber = { version = "0.3.19", features = [
+    "env-filter",
+], default-features = false }
 reqwest = { version = "0.12.23", features = [
     "json",
     "stream",
@@ -40,9 +42,12 @@ sha1 = "0.11.0-rc.0"
 dirs = "6.0.0"
 hex = "0.4.3"
 which = "8.0.0"
-tracing = "0.1.41"
+tracing = { version = "0.1.41", default-features = false }
 anyhow = "1.0.99"
-image = { version = "0.25.6", default-features = false, features = ["png"] }
+image = { version = "0.25.6", default-features = false, features = [
+    "png",
+    "jpeg",
+] }
 tao = "0.34.0"
 zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
 
@@ -55,6 +60,21 @@ desktop = ["dioxus/desktop"]
 
 [profile.dev]
 incremental = true
+debug = 1
+opt-level = 1
+
+[profile.release]
+opt-level = "s"
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+strip = true
+overflow-checks = false
+debug-assertions = false
+rpath = false
+
+[profile.release.package."*"]
+opt-level = "s"
 
 [lints.clippy]
 correctness = { level = "deny", priority = -1 }
