feat: implement compression testing script

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,6 +9,8 @@ test-all = "test --all-features"
 # Build aliases
 build-release = "build --release"
 build-dev = "build"
+build-static = "build --release"
+build-ultra = "build --profile ultra"
 
 # Clean aliases
 clean-all = "clean"
@@ -33,11 +35,32 @@ pre-commit = [
     "warnings",
 ]
 
+# UPX compression aliases
+compress = "!f() { ./scripts/test-compression.sh compress target/release/DreamLauncher; }; f"
+compress-test = "!f() { ./scripts/test-compression.sh test; }; f"
+build-compressed = "!f() { cargo build --release && ./scripts/test-compression.sh compress target/release/DreamLauncher; }; f"
+
+# Cross-platform static builds
+build-linux-static = "build --release --target x86_64-unknown-linux-gnu"
+build-windows-static = "build --release --target x86_64-pc-windows-gnu"
+build-macos-static = "build --release --target x86_64-apple-darwin"
+
 [build]
 rustflags = ["-C", "target-cpu=native"]
 
 [target.'cfg(target_os = "macos")']
 rustflags = ["-C", "link-arg=-Wl,-rpath,@loader_path"]
+
+[target.'cfg(target_os = "linux")']
+rustflags = [
+    "-C",
+    "link-arg=-static-libstdc++",
+    "-C",
+    "link-arg=-static-libgcc",
+]
+
+[target.'cfg(target_os = "windows")']
+rustflags = ["-C", "target-feature=+crt-static"]
 
 [env]
 RUST_LOG = "info"
