--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,11 @@ tokio = { version = "1.47.1", features = [
     "time",
     "sync",
     "macros",
+    "net",
 ], default-features = false }
-reqwest = { version = "0.12.23", features = [
-    "json",
-    "stream",
-    "native-tls",
-], default-features = false }
+native-tls = "0.2"
+tokio-native-tls = "0.3"
+
 
 [features]
 default = ["desktop"]
