--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,6 +9,8 @@ test-all = "test --all-features"
 # Build aliases
 build-release = "build --release"
 build-dev = "build"
+build-static = "build --release"
+build-ultra = "build --profile ultra"
 
 # Clean aliases
 clean-all = "clean"
@@ -32,12 +34,20 @@ pre-commit = [
     "-D",
     "warnings",
 ]
+# macOS compression alias
+# cargo macos-compress - run: ./scripts/compress-macos.sh build
+
+# Cross-platform builds
+build-linux = "build --release --target x86_64-unknown-linux-gnu"
+build-windows = "build --release --target x86_64-pc-windows-gnu"
+build-macos = "build --release --target x86_64-apple-darwin"
 
 [build]
 rustflags = ["-C", "target-cpu=native"]
 
 [target.'cfg(target_os = "macos")']
 rustflags = ["-C", "link-arg=-Wl,-rpath,@loader_path"]
+
 
 [env]
 RUST_LOG = "info"
