--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: ["**"]
 
+env:
+  CARGO_TERM_COLOR: always
+  RUST_BACKTRACE: 1
+
 jobs:
   build:
     name: Build
@@ -18,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Dependencies
+      - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-24.04'
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
@@ -34,7 +38,16 @@ jobs:
             build-essential
             curl
             xdotool
+            upx-ucl
           version: 1
+
+      - name: Install macOS dependencies
+        if: matrix.os == 'macos-14'
+        run: brew install create-dmg upx
+
+      - name: Install Windows dependencies
+        if: matrix.os == 'windows-2025'
+        run: choco install upx
 
       - name: Cache Rust
         uses: actions/cache@v4
@@ -43,44 +56,46 @@ jobs:
             ~/.rustup
             ~/.cargo/bin
           key: ${{ runner.os }}-rustup-${{ hashFiles('rust-toolchain.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-rustup-
+          restore-keys: ${{ runner.os }}-rustup-
 
       - name: Cache Cargo Registry
         uses: actions/cache@v4
         with:
           path: ~/.cargo/registry
           key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
+          restore-keys: ${{ runner.os }}-cargo-registry-
 
       - name: Cache Cargo Git
         uses: actions/cache@v4
         with:
           path: ~/.cargo/git
           key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
+          restore-keys: ${{ runner.os }}-cargo-git-
 
       - name: Cache Target Dir
         uses: actions/cache@v4
         with:
           path: target
           key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.lock') }}-desktop
-          restore-keys: |
-            ${{ runner.os }}-target-
+          restore-keys: ${{ runner.os }}-target-
 
       - name: Setup Rust
         run: rustup show
 
-      - name: Install macOS dependencies
-        if: matrix.os == 'macos-14'
-        run: brew install create-dmg
-
       - name: Build
+        run: cargo build --release --locked --features "desktop"
+
+      - name: Compress binary
         shell: bash
         run: |
-          cargo build --release --locked --features "desktop"
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            upx --best --lzma target/release/DreamLauncher.exe
+          elif [[ "${{ runner.os }}" == "Linux" ]]; then
+            upx --best --lzma target/release/DreamLauncher
+          elif [[ "${{ runner.os }}" == "macOS" ]]; then
+            chmod +x scripts/compress-macos.sh
+            ./scripts/compress-macos.sh compress target/release/DreamLauncher
+          fi
 
       - name: Package
         shell: bash
@@ -90,15 +105,10 @@ jobs:
             cp target/release/DreamLauncher.exe dist/
             powershell -Command "Compress-Archive -Path dist/DreamLauncher.exe -DestinationPath DreamLauncher-windows.zip"
           elif [[ "${{ runner.os }}" == "macOS" ]]; then
-            # Use our app bundle creation script
             chmod +x scripts/create_app_bundle.sh
             ./scripts/create_app_bundle.sh
-
-            # Sign the app bundle
             find "target/release/Dream Launcher.app" -exec xattr -d com.apple.quarantine {} \; 2>/dev/null || true
             codesign --force --deep --sign - "target/release/Dream Launcher.app"
-
-            # Create DMG
             create-dmg \
               --volname "Dream Launcher" \
               --window-pos 200 120 \
@@ -108,12 +118,8 @@ jobs:
               --hide-extension "Dream Launcher.app" \
               --app-drop-link 600 185 \
               "DreamLauncher-macOS.dmg" \
-              "target/release/Dream Launcher.app" 2>/dev/null || {
-                # Fallback if create-dmg fails
-                hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
-              }
-
-            # Sign DMG
+              "target/release/Dream Launcher.app" 2>/dev/null || \
+              hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
             codesign --force --sign - "DreamLauncher-macOS.dmg"
           else
             cp target/release/DreamLauncher dist/
