--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,41 +22,17 @@ tokio = { version = "1.47.1", features = [
     "time",
     "sync",
     "macros",
+    "net",
 ], default-features = false }
-tracing-subscriber = { version = "0.3.19", features = [
-    "env-filter",
-], default-features = false }
-reqwest = { version = "0.12.23", features = [
-    "json",
-    "stream",
-    "native-tls",
-], default-features = false }
-futures-util = { version = "0.3.31", default-features = false, features = [
-    "std",
-] }
-flate2 = { version = "1.1.2", default-features = false, features = [
-    "rust_backend",
-] }
-tar = { version = "0.4.44", default-features = false }
-sha1 = "0.11.0-rc.0"
-dirs = "6.0.0"
-hex = "0.4.3"
-which = "8.0.0"
-tracing = { version = "0.1.41", default-features = false }
-anyhow = "1.0.99"
-image = { version = "0.25.6", default-features = false, features = [
-    "png",
-    "jpeg",
-] }
-tao = "0.34.0"
-zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
+native-tls = "0.2.14"
+tokio-native-tls = "0.3.1"
 
-[build-dependencies]
-winres = "0.1.12"
 
 [features]
 default = ["desktop"]
 desktop = ["dioxus/desktop"]
+
+minimal = []
 
 [profile.dev]
 incremental = true
@@ -64,17 +40,20 @@ debug = 1
 opt-level = 1
 
 [profile.release]
-opt-level = "s"
+opt-level = "z"
 lto = "fat"
 codegen-units = 1
 panic = "abort"
-strip = true
+strip = "symbols"
 overflow-checks = false
 debug-assertions = false
 rpath = false
+incremental = false
+debug = false
+split-debuginfo = "off"
 
 [profile.release.package."*"]
-opt-level = "s"
+opt-level = "z"
 
 [lints.clippy]
 correctness = { level = "deny", priority = -1 }
